--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,8 @@
   "version": 2,
   "builds": [{ "src": "index.html", "use": "@vercel/static" }],
   "routes": [
-    { "src": "/(.*)", "dest": "/index.html" }
+    { "src": "/(.*\\.(css|js|png|jpg|jpeg|gif|svg|ico))", "dest": "/$1" },
+    { "src": "/index\\.html", "dest": "/index.html" },
+    { "src": "/.*", "dest": "/index.html" }
   ]
 }
